--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_database">Database</string>
     <string name="title_activity_log">LogActivity</string>
+    <string name="title_activity_graph">GraphActivity</string>
+    <string name="title_activity_my_home">MyHomeActivity</string>
+
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_activity_tab">TabActivity</string>
 </resources>
